[package]
name = "to-syn-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
to-syn-error-derive={path = "./to-syn-error-derive"}
syn="1.0"
proc-macro2="1.0"

[dev-dependencies]
thiserror="1.0"

[workspace]
members = ["to-syn-error-derive"]
