[package]
name = "to-syn-error"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "util to use with syn and thiserror"
repository = "https://github.com/NULL-header/to-syn-error"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
to-syn-error-derive={path = "./to-syn-error-derive"}
syn={version = "1.0",features = ["full"]}
proc-macro2="1.0"

[dev-dependencies]
thiserror="1.0"

[workspace]
members = ["to-syn-error-derive"]
