[package]
name = "to-syn-error-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
proc-macro2="1.0"
thiserror="1.0"
quote = "1.0"

[dev-dependencies]
rstest="0.13"
assert-parse="1.0"
# if without under, cargo uses 1.0.2
assert-parse-register-assert-macro="1.0.3"
